--- a/Vidly/Views/Shared/_NavBar.cshtml
+++ b/Vidly/Views/Shared/_NavBar.cshtml
@@ -6,7 +6,7 @@
             </button>
             <button class="btn btn-outline-info">@Html.ActionLink("New Rental", "New", "Rentals")</button>
             <button class="btn btn-outline-info">@Html.ActionLink("Customers", "Index", "Customers")</button>
-            <button class="btn btn-outline-info">@Html.ActionLink("Movies", "Index", "Movies")</button>
+            <button class="btn btn-outline-info">@Html.ActionLink("Movies", "Random", "Movies")</button>
             
         </div>
         @Html.Partial("_LoginPartial")
