--- a/Vidly/Views/Customers/Index.cshtml
+++ b/Vidly/Views/Customers/Index.cshtml
@@ -4,24 +4,28 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<table class="table table-hover table-primary" style="width: 100%">
-    <tr>
-        <th>Customer Name</th>
-    </tr>
-    <td>
+    <table class="table table-hover table-primary" style="width: 100%">
+        <thead>
+        <tr>
+            <th>Customer Name</th>
+            <th>Discount Rate</th>
+        </tr>
+        </thead>
+        <tbody>
         @if (!Model.Any())
         {
             <h3>We don't have any customers yet.</h3>
         }
         @foreach (var customer in Model)
         {
-            <li>
-                @Html.ActionLink(customer.Name, "Details", "Customers", new {id = customer.Id}, null)
-            </li>
+            <tr>
+                <td>@Html.ActionLink(customer.Name, "Details", "Customers", new { id = customer.Id }, null)</td>
+                <td>@customer.MembershipType.DiscountRate %</td>
+            </tr>
         }
-    </td>
-    
-</table>
+
+        </tbody>
+    </table>
 
 
 
