--- a/Vidly/Views/Customers/Index.cshtml
+++ b/Vidly/Views/Customers/Index.cshtml
@@ -20,7 +20,7 @@
         {
             <tr>
                 <td>@Html.ActionLink(customer.Name, "Details", "Customers", new { id = customer.Id }, null)</td>
-                <td>@customer.MembershipType.DiscountRate %</td>
+                <td>@customer.MembershipType.Name</td>
             </tr>
         }
 
