--- a/Vidly/Views/Movies/Random.cshtml
+++ b/Vidly/Views/Movies/Random.cshtml
@@ -4,19 +4,25 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<table class="table table-hover table-primary" style="width: 100%">
-    <tr>
-        <th>Movie Name</th>
-    </tr>
-    <td>
-        @if (!Model.Any())
-        {
-            <h3>We don't have any movies yet.</h3>
-        }
-        @foreach (var movie in Model)
-        {
-            <li>@movie.Name</li>
-        }
-    </td>
 
+<table class="table table-hover table-primary" style="width: 100%">
+    <thead>
+        <tr>
+            <th>Movie</th>
+            <th>Genre</th>
+        </tr>
+    </thead>
+    <tbody>
+    @if (!Model.Any())
+    {
+        <h3>We don't have any movies yet.</h3>
+    }
+    @foreach (var movie in Model)
+    {
+        <tr>
+            <td>@Html.ActionLink(movie.Name, "Details", "Movies", new { id = movie.Id }, null)</td>
+            <td>@movie.Genre.Name</td>
+        </tr>
+    }
+    </tbody>
 </table>
