--- a/Vidly/Views/Shared/_Layout.cshtml
+++ b/Vidly/Views/Shared/_Layout.cshtml
@@ -14,7 +14,7 @@
     @RenderBody()
     <hr/>
     <footer>
-        <p>&copy; @DateTime.Now.Year - My ASP.NET Application</p>
+        <p>&copy; @DateTime.Now.Year - contact us with <a href="https://www.gmail.com">abdullahmahmoud4550@gmail.com</a> </p>
     </footer>
 </div>
 
