--- a/Vidly/Views/Customers/New.cshtml
+++ b/Vidly/Views/Customers/New.cshtml
@@ -25,6 +25,7 @@
         @Html.LabelFor(m=>m.Customer.MembershipTypeId)
         @Html.DropDownListFor(m=>m.Customer.MembershipTypeId, new SelectList(Model.MembershipTypes,"Id", "Name"), "Select Membership Type", new {@class="form-control"})
     </div>
+    <button type="submit" class="btn-outline-info">Save</button>
 
 
 }
